--- a/templates/chat/home.html
+++ b/templates/chat/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
 </head>
 <body>
@@ -46,12 +47,14 @@
         <form id="post-form" method="POST" action="checkview">
             {% csrf_token %}
             <label>Room Name</label>
-            <input type="text" name="room_name" id="room_name" width="100px" />
+            <input type="text" name="room_name" id="room_name" width="100px" required/>
             <label>Username</label>
-            <input type="text" name="username" id="username" width="100px" />
+            <input type="text" name="username" id="username" width="100px" required/>
             <input type="submit" value="Enter Room">
         </form>
     </div>
     
+
+    <script src="{% static 'scripts/home.js' %}"></script>
 </body>
 </html>
